tests/script_errors/invalid_utf8_1/error.txt
Error: 
    1 | "\u000"
      |       ^ An unexpected escape code '"' was found